when u press a wrong button the correct one appears and some changes to the next btn on mobile

--- a/it-quiz.css
+++ b/it-quiz.css
@@ -12,7 +12,7 @@
 .it-quiz {
   height: 100vh;
   display: grid;
-  grid-template-rows: 5% 35% 55%;
+  grid-template-rows: 5% 35% 50%;
 }
 .top {
   display: flex;
@@ -24,7 +24,6 @@
   background-color: #168c80;
   border: none;
   padding-top: 10px;
-  /* display: none; */
 }
 .home-btn lord-icon {
   width: 40px;
@@ -82,16 +81,18 @@ li button {
   border-radius: 30px;
 }
 
-li button:hover {
-  background-color: #2ad2c1;
+.gren {
+  background-color: rgb(42, 230, 42);
 }
+
 .correct:focus {
   background-color: rgb(42, 230, 42);
 }
 
 .incorrect:focus {
-  background-color: rgb(238, 42, 42);
+  background-color: rgb(230, 42, 42);
 }
+
 .next-question {
   height: 100%;
 }
@@ -104,21 +105,32 @@ li button:hover {
   cursor: pointer;
   font-size: 20px;
 }
-.next-question button:hover {
-  background-color: #168c80;
-  transition: all 0.5s;
-}
 
 @media only screen and (max-width: 600px) {
+  body {
+    overflow: hidden;
+  }
+  .it-quiz {
+    grid-template-rows: 5% 35% 40%;
+  }
+
   .quiz-question {
     font-size: 18px;
+  }
+  .quiz-answers {
+    margin-top: 45px;
   }
   li button {
     font-size: 15px;
     width: 250px;
     height: 35px;
   }
+
   .next-question button {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
     font-size: 15px;
   }
   .back-button lord-icon {
@@ -131,5 +143,14 @@ li button:hover {
   }
   .count {
     font-size: 18px;
+  }
+}
+@media only screen and (min-width: 601px) {
+  li button:hover {
+    background-color: #2ad2c1;
+  }
+  .next-question button:hover {
+    background-color: #168c80;
+    transition: all 0.5s;
   }
 }
